Added JVM options config section and updated custom keystore config.